# rustymon-world

./: Cargo.toml
benches/: feature_parser.rs  tag_list.rs
src/: buffered.rs  generator.rs  lib.rs  main.rs  measurements.rs  projection.rs  publish.rs  threading.rs  timer.rs
src/features/: aho_corasick.rs  automaton.rs  config.pest  config.rs  mod.rs  pest_ext.rs  prototyping.rs  simple.rs  simplify.rs  yada.rs
src/formats/: memeff.rs  mod.rs  production.rs  pytest.rs
src/geometry/: bbox.rs  grid.rs  iter.rs  mod.rs  polygon.rs  polyline.rs  primitives.rs
