[package]
name = "rustymon_world"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustymon_world"
required-features = ["binary"]

[[bin]]
name = "get_tag_samples"
required-features = ["message-pack"]

[[bench]]
name = "tag_list"
harness = false

[[bench]]
name = "feature_parser"
harness = false

[features]
binary = ["serde_json", "clap", "env_logger"]
message-pack = ["rmp-serde"]

[dependencies]
# Fast pre parsing of tags
yada = { version = "~0.5", optional = true }

# Config parsing
pest = { version = "~2.5" }
pest_derive = { version = "~2.5" }

# Used in grid.rs to store intersections on the stack while using a Vec like interface
smallvec = { version = "1.9" }

# Used everywhere for geometry
nalgebra = { version = "0.31", features = ["serde-serialize"] }

# Make the formats serializable
serde = { version = "1.0", features = ["derive"] }
serde_repr = { version = "0.1" } # used in the ...VisualType prototypes

# Used in generator.rs to parse osm's pbf files
libosmium = { version = "0.2.1", path = "../libosmium", features = ["serde"] }

# Produce json output and read config
serde_json = { version = "1.0", optional = true }

# Cli parsing
clap = { version = "3.2", features = ["derive"], optional = true }

# Logging
log = { version = "0.4" }
env_logger = { version = "0.9", optional = true }

rmp-serde = { version = "~1.1", optional = true }

[dev-dependencies]
criterion = { version = "~0.4", features = ["html_reports"] }