[package]
name = "rustymon_world"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustymon_world"
required-features = ["binary"]

[[bin]]
name = "get_tag_samples"
required-features = ["message-pack"]

[[bench]]
name = "feature_parser"
harness = false

[features]
default = ["binary", "message-pack"]
binary = ["serde_json", "clap", "env_logger"]
message-pack = ["rmp-serde"]

[dependencies]
# Fast pre parsing of tags
yada = { version = "~0.5" }

# Config parsing
pest = { version = "~2.5" }
pest_derive = { version = "~2.5" }

# Order preserving map
linear-map = { version = "1.2", features= ["serde_impl"] }

# Used in grid.rs to store intersections on the stack while using a Vec like interface
smallvec = { version = "1.9" }

# Used everywhere for geometry
nalgebra = { version = "0.31", features = ["serde-serialize"] }

# Make the formats serializable
serde = { version = "1.0", features = ["derive"] }

# Used in generator.rs to parse osm's pbf files
libosmium = { version = "0.3.1", features = ["serde"] }

# Logging
log = { version = "0.4" }

# Channels for multithreading
crossbeam-channel = { version = "0.5" }

# For "binary" feature:

# Cli parsing
clap = { version = "~4.0", features = ["derive"], optional = true }

# Logger
env_logger = { version = "0.10", optional = true }

# Json output format and config files
serde_json = { version = "1.0", optional = true }

# MessagePack output format
rmp-serde = { version = "~1.1", optional = true }

[dev-dependencies]
criterion = { version = "~0.4", features = ["html_reports"] }
